--- a/Rainfall.Core/Rainfall.Core.csproj
+++ b/Rainfall.Core/Rainfall.Core.csproj
@@ -7,9 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ardalis.Result" Version="8.0.0" />
-    <PackageReference Include="Ardalis.Result.FluentValidation" Version="7.2.0" />
-    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
   </ItemGroup>
 
   <ItemGroup>
